# backend/src/movies-on-demand/types.ts
@@ -50,7 +50,6 @@ export type JobStatus =
     | "queued"
     | "starting"
     | "downloading"
-    | "preparing"
     | "ready"
     | "error"
     | "deleted";
